Added Indeed functionality

--- a/popup.html
+++ b/popup.html
@@ -131,7 +131,7 @@ Front end calls the backend, popup.js, to store and transmit information to the 
 
 <body>
 	<div class="header">
-		<img src="icon.png" alt="Icon">
+		<img src="icon48.png" alt="Icon">
 		<span class="header-title">Equality Compass</span>
 	</div>
 
