--- a/popup.html
+++ b/popup.html
@@ -161,6 +161,11 @@ Front end calls the backend, popup.js, to store and transmit information to the 
 		<div class="legend-item" style="background-color: Coral;" title="&ge; 0">Low</div>
 		<div class="legend-item" style="background-color: FireBrick;" title="&lt; 0">Negative</div>
 	</div>
+	
+	
+	<div style="text-align: center">
+		<a href='https://ko-fi.com/Q5Q41GXDPM' target='_blank'><img height='36' style='border:0px;height:36px;padding: 10px 0px 0px 0px;' src='https://storage.ko-fi.com/cdn/kofi6.png?v=6' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
+	</div>
 </div>
 
 
