--- a/browserAction/popup.html
+++ b/browserAction/popup.html
@@ -11,7 +11,7 @@ Triggers popup.js listeners to store information to the addon.
 
 <body>
 	<div class="header">
-		<img src="icon48.png" alt="Icon">
+		<img src="icons/icon96.png" alt="Icon">
 		<span class="header-title">Equality Compass</span>
 	</div>
 
