Dynamic popup tooltips, fixed popup icon
Fixed an issue where the filepath was not correctly specified for the icon in popup.html.

Changed popup.html to have id tags associated with the div to allow for dynamic tooltip changes and also allow for different languages to be displayed in the text fields.

Added a function to popup.js that runs on load and on change of mode that dynamically changes the popups to be associated with the respective scores, as the thresholds for gender identity and overall policy are different.

--- a/browserAction/popup.html
+++ b/browserAction/popup.html
@@ -11,7 +11,7 @@ Triggers popup.js listeners to store information to the addon.
 
 <body>
 	<div class="header">
-		<img src="icons/icon96.png" alt="Icon">
+		<img src="../icons/icon96.png" alt="Icon">
 		<span class="header-title">Equality Compass</span>
 	</div>
 
@@ -35,11 +35,11 @@ Triggers popup.js listeners to store information to the addon.
 	<div class="legend">
 	<div class="legend-title">Color Legend (Policy Score)</div>
 	<div class="legend-row">
-		<div class="legend-item" style="background-color: DarkGreen;" title="&ge; 36.75">High</div>
-		<div class="legend-item" style="background-color: DarkSeaGreen;" title="&ge; 24.5">Medium</div>
-		<div class="legend-item" style="background-color: DarkKhaki;" title="&ge; 12.25">Fair</div>
-		<div class="legend-item" style="background-color: Coral;" title="&ge; 0">Low</div>
-		<div class="legend-item" style="background-color: FireBrick;" title="&lt; 0">Negative</div>
+		<div class="legend-item" id="high" style="background-color: DarkGreen;" title="&ge; 36.75">High</div>
+		<div class="legend-item" id="medium" style="background-color: DarkSeaGreen;" title="&ge; 24.5">Medium</div>
+		<div class="legend-item" id="fair" style="background-color: DarkKhaki;" title="&ge; 12.25">Fair</div>
+		<div class="legend-item" id="low" style="background-color: Coral;" title="&ge; 0">Low</div>
+		<div class="legend-item" id="negative" style="background-color: FireBrick;" title="&lt; 0">Negative</div>
 	</div>
 	
 	
