Changed addon to extension

--- a/browserAction/popup.html
+++ b/browserAction/popup.html
@@ -1,6 +1,6 @@
 <!--
-Front end logic for the addon's "popup" or "addon" tab when the icon is clicked or selected in the addon menu.
-Triggers popup.js listeners to store information to the addon.
+Front end logic for the extension's "popup" or "extension" tab when the icon is clicked or selected in the extension menu.
+Triggers popup.js listeners to store information to the extension.
  --> 
 
 <!DOCTYPE html>
