Polyfill - Chrome support
Deployment between the two browsers is one line of code change now:
"scripts": ["background.js"],
to
"service_worker": "background.js"

--- a/browserAction/popup.html
+++ b/browserAction/popup.html
@@ -53,6 +53,7 @@ Triggers popup.js listeners to store information to the extension.
 	Data source: <a href="https://www.mapresearch.org/equality-maps/equality-maps" target="_blank">Movement Advancement Project (MAP)</a>
 	</div>
 
+	<script src="../lib/browser-polyfill.js"></script>
 	<script src="popup.js"></script>
 
 </body>
